# spark-template

./: .env.example  .gitignore  .spark-initial-sha  FANTASY_README.md  PRD.md  index.html  package-lock.json  test_db.py
.github/: bild-prompt.md  copilot-instructions.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py  seed_database.py
backend/app/api/: routes_advice.py  routes_draft.py  routes_rankings.py
backend/app/core/: config.py  exposure.py  monte_carlo.py  opponent_model.py  schedule_pockets.py
backend/app/data/: adp.csv  depth_charts.csv  historical_stats_2023.csv  injuries.csv  player_id_mappings.csv  projections_2024.csv
backend/app/db/: base.py
backend/app/services/: id_map.py  ingest_adp.py  ingest_depth.py  ingest_injuries.py  (+2 more)
backend/tests/: test_id_map.py  test_monte_carlo.py  test_scoring.py  test_vorp.py
fantasy-assistant/: README.md
fantasy-assistant/backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
fantasy-assistant/backend/app/api/: routes_advice.py  routes_draft.py  routes_rankings.py
fantasy-assistant/backend/app/core/: config.py  exposure.py  monte_carlo.py  opponent_model.py  schedule_pockets.py  scoring.py  tiers.py  vorp.py
fantasy-assistant/backend/app/db/: base.py  models.py
fantasy-assistant/backend/app/db/schema_migrations/: 001_init.sql
fantasy-assistant/backend/app/services/: id_map.py  ingest_depth.py  ingest_injuries.py  ingest_projections.py  ingest_sportsdata.py  ingest_stats_last_year.py  sleeper_sync.py
fantasy-assistant/backend/app/workers/: scheduler.py
fantasy-assistant/backend/tests/: test_advice.py  test_id_map.py  test_monte_carlo.py  test_scoring.py  test_vorp.py
fantasy-assistant/frontend/: Dockerfile  next.config.js  package-lock.json  package.json
fantasy-assistant/ops/: docker-compose.yml  migrate.sh  seed.sh
frontend/: Dockerfile  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: layout.tsx
frontend/e2e/: draft.spec.ts  playwright.config.ts
ops/: docker-compose.yml  migrate.sh
src/: App.tsx  index.css
src/components/: DraftAdvice.tsx  DraftBoard.tsx  Filters.tsx  PlayerCard.tsx
src/lib/: draftLogic.ts  mockData.ts  types.ts
(+41 files in other folders)
