[tool.poetry]
name = "fantasy-assistant-backend"
version = "0.1.0"
description = "AI Fantasy Draft Assistant Backend"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
pydantic = "^2.7.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
httpx = "^0.27.0"
uvicorn = "^0.29.0"
scikit-learn = "^1.5.0"
orjson = "^3.10.0"
apscheduler = "^3.10.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
